# uavcast-setup

./: .gitignore  README.md  deploy-local.sh  deploy-remote.sh  dev-start.sh  restart.sh  start.sh  status.sh  stop.sh
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: websocket.py
backend/app/api/routes/: config.py  network.py  profiles.py  system.py  telemetry.py  video.py  vpn.py
backend/app/core/: config.py  database.py  events.py
backend/app/models/: config.py
backend/app/services/: camera_detector.py  mavlink_router.py  mediamtx_manager.py  network_manager.py  system_monitor.py  video_streamer.py  vpn_manager.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ConfigProfiles.tsx  Dashboard.tsx  ErrorBoundary.tsx  FlightController.tsx  FlightMap.tsx  NetworkStatus.tsx  SystemMonitor.tsx  TelemetryDisplay.tsx  ToastProvider.tsx  VPNConfig.tsx  VideoPreview.tsx  VideoSettings.tsx
scripts/: install.sh
systemd/: uavcast-backend.service  uavcast-web.service
