[tool.poetry]
name = "uavcast-free"
version = "1.0.0"
description = "Open-source UAV companion computer software"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
aiosqlite = "^0.19.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
pymavlink = "^2.4.41"
pyserial = "^3.5"
python-multipart = "^0.0.6"
websockets = "^12.0"
psutil = "^5.9.8"
aiofiles = "^23.2.1"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.12.1"
flake8 = "^6.1.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
